--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -3,6 +3,7 @@
         display: none;
     }
 }
+
 @media(max-width: 1200px){
     .container{
         max-width: 960px;
@@ -37,6 +38,27 @@
             grid-gap: 30px;
         }
     }
+    .portfolio{
+        &__wrapper{
+            .horisontal, .vertical{
+                grid-row: unset;
+                grid-column: unset;
+            }
+            grid-template-columns: repeat(auto-fit, 280px);
+            grid-auto-rows: 280px;
+            justify-content: center;
+            gap: 35px;
+        }
+    }
+    .contacts{
+        &__wrapper{
+            grid-template-columns: 400px 520px;
+            padding: 0;
+        }
+        &__form{
+            grid-template: 45px 190px 45px / repeat(2, 250px);
+        }
+    }
 }
 
 @media(max-width: 992px){
@@ -47,6 +69,9 @@
         &_fz36{
             font-size: 30px;
         }
+    }
+    .divider{
+        margin: 15px auto 0 auto;  
     }
     .about{
         padding: 90px 0 0 0;
@@ -105,6 +130,31 @@
             grid-gap: 30px;
         }
     }
+    .price-list{
+        &__wrapper{
+            grid-template-columns: repeat(auto-fit, 350px);
+            padding: 0;
+        }
+    }
+    .contacts{
+        &__wrapper {
+            grid-template-columns: 300px 400px;
+        }
+        &__form {
+            grid-template: 45px 190px 45px / repeat(2, 195px);
+        }
+        &__btn {
+            padding: 8px 25px;
+            line-height: 16px;
+        }
+        &__photo{
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
 }
 
 @media(max-width: 768px){
@@ -156,6 +206,28 @@
             grid-template: repeat(6, 70px) / repeat(1, 300px);
             justify-content: center;
             grid-gap: 30px;
+        }
+    }
+    .portfolio{
+        padding: 40px 0 0 0;
+    }
+    .price-list{
+        padding: 40px 0 0 0;
+        &__wrapper{
+            margin: 20px 0 0 0;
+           justify-content: center;
+        }
+    }
+    .contacts {
+        padding-top: 40px;
+        &__photo {
+            display: none;
+        }
+        &__wrapper {
+            grid-template-columns: 1fr;
+        }
+        &__form {
+            grid-template: 45px 190px 45px / repeat(2, 250px);
         }
     }
 }
@@ -236,6 +308,37 @@
             grid-template-columns: 300px;
             justify-content: center;
             grid-gap: 40px;
+        }
+    }
+    .price-list{
+        &__wrapper{
+           grid-template-columns: repeat(auto-fit, 295px);
+        }
+    }
+    .contacts {
+        padding-bottom: 50px;
+        &__form {
+            grid-template: 45px 45px 190px minmax(45px, auto) / 1fr;
+        }
+        &__textarea {
+            grid-column: unset;
+            width: 100%;
+        }
+        &__triggers {
+            grid-column: unset;
+            grid-template-columns: 1fr;
+            column-gap: unset;
+            row-gap: 20px;
+        }
+        &__btn {
+            order: 2;
+            max-width: 220px;
+            margin: 0 auto;
+        }
+        &__policy {
+            width: 180px;
+            margin: 0 auto;
+            line-height: 18px;
         }
     }
 }
